[package]
name = "integration"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.10.0", git = "https://github.com/iced-rs/iced", features = ["advanced"] }
iced_graphics = { version = "0.9.0", git = "https://github.com/iced-rs/iced" }
iced_winit = { version = "0.10.0", git = "https://github.com/iced-rs/iced" }
iced_wgpu = { version = "0.11.1", git = "https://github.com/iced-rs/iced" }
iced_widget = { version = "0.1.0", git = "https://github.com/iced-rs/iced" }
iced_renderer = { version = "0.1.0", features = ["wgpu"], git = "https://github.com/iced-rs/iced" }
env_logger = "0.10"
libc = "0.2.147"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "HtmlCanvasElement", "Window", "Document"] }
# This dependency a little bit quirky, it is deep in the tree and without `js` feature it
# refuses to work with `wasm32-unknown-unknown target`. Unfortunately, we need this patch
# to make it work
getrandom = { version = "0.2", features = ["js"] }
